# Bildverarbeitungssystem-mit-OpenCV-und-Tiefenkamera

./: CMakeLists.txt  README.md
src/: HistogrammProcessor.hpp  MotionDetector.hpp  main (5).cpp
